# lego-ai

./: .gitignore  AGENTS.md  ASSISTANT.md  CLAUDE.md  README.md  pyproject.toml  test_absdf.py
.agents/: AGENTS.md
Mindstorms/: __init__.py  assets.py  cli.py  demo_housing.py  features.py  protocol.py  recipes.py  runs.py  studio.py  warnings.py
Technic/: data.py  segment.py  test.py  testset.py  transform.py
Technic/support/: type_tsfm.yaml
docs/: asset_run_protocol_v0_1.md  copilot_cli_pilot.md  lego_ai_master_plan.md  lego_ai_tracker.md  search_fit_visibility_protocol_plan.md  search_review_view_plan.md  studio_detail_slice_plan.md
scripts/: lego.cmd
tests/: test_mindstorms_assets.py  test_mindstorms_cli.py  test_mindstorms_features.py  test_mindstorms_protocol.py  test_mindstorms_recipes.py  test_mindstorms_runs.py  test_mindstorms_studio.py  test_mindstorms_warnings.py
